assignment_3/src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from d:/Learning_Documents_of_Third_Year/Principles of Programming Languages/Assignment 232/assignment_3/src/main/zcode/parser/ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'number'", "'bool'", "'string'", "'return'", "'var'", 
                     "'dynamic'", "'func'", "'for'", "'until'", "'by'", 
                     "'break'", "'continue'", "'if'", "'else'", "'elif'", 
                     "'begin'", "'end'", "'not'", "'and'", "'or'", "'('", 
                     "')'", "'['", "']'", "','", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'=='", "'<-'", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'...'" ]

    symbolicNames = [ "<INVALID>", "CMT", "WS", "NEWLINE", "NUMBER", "BOOL", 
                      "STRING_DEF", "RETURN", "VAR", "DYNAMIC", "FUNC", 
                      "FOR", "UNTIL", "BY", "BREAK", "CONT", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "NOT", "AND", "OR", "LB", 
                      "RB", "LBRACE", "RBRACE", "COMMA", "ADD", "MINUS", 
                      "MUL", "DIV", "MOD", "EQUAL_NUM", "EQUAL_STR", "ASS", 
                      "DIF", "SM", "SMOE", "BG", "BGOE", "CON", "NUMBER_LIT", 
                      "BOOL_LIT", "STR_LIT", "IDENTIFIER", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_var_decl_full = 3
    RULE_func_decl = 4
    RULE_function_body = 5
    RULE_statement_list = 6
    RULE_nonnull_statement = 7
    RULE_statement_full = 8
    RULE_elif_list = 9
    RULE_elif_stmt = 10
    RULE_stmt = 11
    RULE_all_stmt = 12
    RULE_block_stmt = 13
    RULE_return_stmt = 14
    RULE_parameter_list = 15
    RULE_nonnull_parameter = 16
    RULE_parameter = 17
    RULE_var_decl = 18
    RULE_varkey_decl = 19
    RULE_dykey_decl = 20
    RULE_prikey_decl = 21
    RULE_pri_type = 22
    RULE_arr_type = 23
    RULE_numlit_list = 24
    RULE_arr_value = 25
    RULE_expression1 = 26
    RULE_expression2 = 27
    RULE_expression3 = 28
    RULE_expression4 = 29
    RULE_expression5 = 30
    RULE_expression6 = 31
    RULE_expression7 = 32
    RULE_expression8 = 33
    RULE_expression9 = 34
    RULE_expression10 = 35
    RULE_acc_arr = 36
    RULE_arr_ele = 37
    RULE_arr_expr = 38
    RULE_index_operators = 39
    RULE_function_call = 40
    RULE_argurment_list = 41
    RULE_nonnull_argurment = 42
    RULE_argurment = 43
    RULE_newline_list = 44
    RULE_nonnull_newline = 45

    ruleNames =  [ "program", "decl_list", "decl", "var_decl_full", "func_decl", 
                   "function_body", "statement_list", "nonnull_statement", 
                   "statement_full", "elif_list", "elif_stmt", "stmt", "all_stmt", 
                   "block_stmt", "return_stmt", "parameter_list", "nonnull_parameter", 
                   "parameter", "var_decl", "varkey_decl", "dykey_decl", 
                   "prikey_decl", "pri_type", "arr_type", "numlit_list", 
                   "arr_value", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "expression8", "expression9", "expression10", "acc_arr", 
                   "arr_ele", "arr_expr", "index_operators", "function_call", 
                   "argurment_list", "nonnull_argurment", "argurment", "newline_list", 
                   "nonnull_newline" ]

    EOF = Token.EOF
    CMT=1
    WS=2
    NEWLINE=3
    NUMBER=4
    BOOL=5
    STRING_DEF=6
    RETURN=7
    VAR=8
    DYNAMIC=9
    FUNC=10
    FOR=11
    UNTIL=12
    BY=13
    BREAK=14
    CONT=15
    IF=16
    ELSE=17
    ELIF=18
    BEGIN=19
    END=20
    NOT=21
    AND=22
    OR=23
    LB=24
    RB=25
    LBRACE=26
    RBRACE=27
    COMMA=28
    ADD=29
    MINUS=30
    MUL=31
    DIV=32
    MOD=33
    EQUAL_NUM=34
    EQUAL_STR=35
    ASS=36
    DIF=37
    SM=38
    SMOE=39
    BG=40
    BGOE=41
    CON=42
    NUMBER_LIT=43
    BOOL_LIT=44
    STR_LIT=45
    IDENTIFIER=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.newline_list()
            self.state = 93
            self.decl_list()
            self.state = 94
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl_list




    def decl_list(self):

        localctx = ZCodeParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.decl()
                self.state = 97
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declContext,0)


        def var_decl_full(self):
            return self.getTypedRuleContext(ZCodeParser.Var_decl_fullContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.func_decl()
                pass
            elif token in [4, 5, 6, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.var_decl_full()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declContext,0)


        def nonnull_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_newlineContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var_decl_full




    def var_decl_full(self):

        localctx = ZCodeParser.Var_decl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.var_decl()
            self.state = 107
            self.nonnull_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(ZCodeParser.Parameter_listContext,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def nonnull_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_newlineContext,0)


        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def function_body(self):
            return self.getTypedRuleContext(ZCodeParser.Function_bodyContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_decl




    def func_decl(self):

        localctx = ZCodeParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(ZCodeParser.FUNC)
            self.state = 110
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 111
            self.match(ZCodeParser.LB)
            self.state = 112
            self.parameter_list()
            self.state = 113
            self.match(ZCodeParser.RB)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 114
                self.newline_list()
                self.state = 115
                self.function_body()


            self.state = 119
            self.nonnull_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_function_body




    def function_body(self):

        localctx = ZCodeParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_body)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.block_stmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonnull_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_statementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statement_list




    def statement_list(self):

        localctx = ZCodeParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement_list)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 9, 11, 14, 15, 16, 19, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.nonnull_statement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nonnull_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_full(self):
            return self.getTypedRuleContext(ZCodeParser.Statement_fullContext,0)


        def nonnull_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_statementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_nonnull_statement




    def nonnull_statement(self):

        localctx = ZCodeParser.Nonnull_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nonnull_statement)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.statement_full()
                self.state = 130
                self.nonnull_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.statement_full()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(ZCodeParser.StmtContext,0)


        def nonnull_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_newlineContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statement_full




    def statement_full(self):

        localctx = ZCodeParser.Statement_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.stmt()
            self.state = 136
            self.nonnull_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elif_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Elif_stmtContext,0)


        def elif_list(self):
            return self.getTypedRuleContext(ZCodeParser.Elif_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_elif_list




    def elif_list(self):

        localctx = ZCodeParser.Elif_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_elif_list)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.elif_stmt()
                self.state = 139
                self.elif_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonnull_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_newlineContext,0)


        def ELIF(self):
            return self.getToken(ZCodeParser.ELIF, 0)

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def all_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.All_stmtContext,0)


        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def expression1(self):
            return self.getTypedRuleContext(ZCodeParser.Expression1Context,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_elif_stmt




    def elif_stmt(self):

        localctx = ZCodeParser.Elif_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elif_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.nonnull_newline()
            self.state = 145
            self.match(ZCodeParser.ELIF)

            self.state = 146
            self.match(ZCodeParser.LB)
            self.state = 147
            self.expression1()
            self.state = 148
            self.match(ZCodeParser.RB)
            self.state = 150
            self.newline_list()
            self.state = 151
            self.all_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declContext,0)


        def ASS(self):
            return self.getToken(ZCodeParser.ASS, 0)

        def expression1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Expression1Context)
            else:
                return self.getTypedRuleContext(ZCodeParser.Expression1Context,i)


        def arr_ele(self):
            return self.getTypedRuleContext(ZCodeParser.Arr_eleContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def IF(self):
            return self.getToken(ZCodeParser.IF, 0)

        def newline_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Newline_listContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Newline_listContext,i)


        def all_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.All_stmtContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.All_stmtContext,i)


        def elif_list(self):
            return self.getTypedRuleContext(ZCodeParser.Elif_listContext,0)


        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def nonnull_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Nonnull_newlineContext,0)


        def ELSE(self):
            return self.getToken(ZCodeParser.ELSE, 0)

        def FOR(self):
            return self.getToken(ZCodeParser.FOR, 0)

        def UNTIL(self):
            return self.getToken(ZCodeParser.UNTIL, 0)

        def BY(self):
            return self.getToken(ZCodeParser.BY, 0)

        def BREAK(self):
            return self.getToken(ZCodeParser.BREAK, 0)

        def CONT(self):
            return self.getToken(ZCodeParser.CONT, 0)

        def argurment_list(self):
            return self.getTypedRuleContext(ZCodeParser.Argurment_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stmt




    def stmt(self):

        localctx = ZCodeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.arr_ele()
                    pass

                elif la_ == 2:
                    self.state = 155
                    self.match(ZCodeParser.IDENTIFIER)
                    pass


                self.state = 158
                self.match(ZCodeParser.ASS)
                self.state = 159
                self.expression1()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.block_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 162
                self.match(ZCodeParser.IF)

                self.state = 163
                self.match(ZCodeParser.LB)
                self.state = 164
                self.expression1()
                self.state = 165
                self.match(ZCodeParser.RB)
                self.state = 167
                self.newline_list()
                self.state = 168
                self.all_stmt()
                self.state = 169
                self.elif_list()
                self.state = 175
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 170
                    self.nonnull_newline()
                    self.state = 171
                    self.match(ZCodeParser.ELSE)
                    self.state = 172
                    self.newline_list()
                    self.state = 173
                    self.all_stmt()


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.match(ZCodeParser.FOR)
                self.state = 178
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 179
                self.match(ZCodeParser.UNTIL)
                self.state = 180
                self.expression1()
                self.state = 181
                self.match(ZCodeParser.BY)
                self.state = 182
                self.expression1()
                self.state = 183
                self.newline_list()
                self.state = 184
                self.all_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 186
                self.match(ZCodeParser.BREAK)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 187
                self.match(ZCodeParser.CONT)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 188
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 189
                self.match(ZCodeParser.LB)
                self.state = 190
                self.argurment_list()
                self.state = 191
                self.match(ZCodeParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class All_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def stmt(self):
            return self.getTypedRuleContext(ZCodeParser.StmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_all_stmt




    def all_stmt(self):

        localctx = ZCodeParser.All_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_all_stmt)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.block_stmt()
                pass
